# rustcode

./: .editorconfig  .gitignore  CLAUDE.md  COMPAREREPORT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  install  package-lock.json  rust-toolchain.toml  rustfmt.toml
.claude/: SESSION_HANDOFF.md
.claude/plans/: config-module.md  permission-module.md  provider-module.md  tool-module.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: retry.sh
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: benchmarks.rs
crates/blazecode-core/: Cargo.toml  package-lock.json
crates/blazecode-core/src/: account.rs  agent.rs  aisdk.rs  auth.rs  background_job.rs  bus.rs  catalog.rs  command.rs  config.rs  credential.rs  database.rs  env.rs  error.rs  event.rs  event_projector.rs  file_mutation.rs  filesystem.rs  flag.rs  flock.rs  format.rs  fs_util.rs  git.rs  (+63 more)
crates/blazecode-derive/: Cargo.toml
crates/blazecode-event/: Cargo.toml
crates/blazecode-event/src/: bus.rs  lib.rs
crates/blazecode-lsp/: Cargo.toml
crates/blazecode-lsp/src/: lib.rs
crates/blazecode-mcp/: Cargo.toml
crates/blazecode-mcp/src/: lib.rs
crates/blazecode-provider/: Cargo.toml
crates/blazecode-provider/src/: cache.rs  lib.rs
crates/blazecode-provider/src/adapter/: anthropic.rs
crates/blazecode-sandbox/: Cargo.toml
crates/blazecode-sandbox/src/: exec.rs  lib.rs  mock.rs  policy.rs
crates/blazecode-server/: Cargo.toml
crates/blazecode-session-core/: Cargo.toml
crates/blazecode-session-core/src/: context.rs  error.rs  lib.rs  state.rs
crates/blazecode-storage/: Cargo.toml
crates/blazecode-storage/src/: jsonl.rs  lib.rs  migration.rs  schema.rs  store.rs
crates/blazecode-tui/: Cargo.toml
crates/opencode-event/: Cargo.toml
crates/opencode-provider/: Cargo.toml
crates/opencode-sandbox/: Cargo.toml
crates/opencode-session-core/: Cargo.toml
crates/opencode-storage/: Cargo.toml
crates/rustcode-core/: Cargo.toml  package-lock.json
crates/rustcode-core/src/: account.rs  agent.rs  aisdk.rs  auth.rs  background_job.rs  bus.rs  catalog.rs  command.rs  config.rs  credential.rs  database.rs  env.rs  error.rs  event.rs  event_projector.rs  file_mutation.rs  filesystem.rs  flag.rs  flock.rs  format.rs  fs_util.rs  git.rs  global.rs  id.rs  ide.rs  image.rs  installation.rs  instruction_context.rs  integration.rs  lib.rs  location.rs  lsp.rs  mcp.rs  mcp_oauth.rs  model.rs  npm.rs  observability.rs  patch.rs  permission.rs  plugin.rs  (+47 more)
crates/rustcode-core/src/encryption/: hmac.rs
crates/rustcode-core/src/providers/: ai21.rs  anthropic.rs  azure.rs  bedrock.rs  bedrock_converse.rs  cerebras.rs  chat_completions.rs  cloudflare.rs  cohere.rs  deepseek.rs  fireworks.rs  gemini.rs  github_copilot.rs  groq.rs  mistral.rs  mod.rs  openai.rs  openai_compatible.rs  openai_responses.rs  openrouter.rs  perplexity.rs  together.rs  xai.rs
crates/rustcode-core/tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  provider_integration.rs
crates/rustcode-derive/: Cargo.toml
crates/rustcode-lsp/: Cargo.toml
crates/rustcode-lsp/src/: lib.rs
crates/rustcode-mcp/: Cargo.toml
crates/rustcode-mcp/src/: lib.rs
crates/rustcode-server/: Cargo.toml
crates/rustcode-server/src/: auth.rs  cors.rs  error.rs  fence.rs  instance_context.rs  lib.rs  proxy.rs  schema_error.rs  server.rs  sse.rs  workspace_routing.rs
crates/rustcode-server/src/routes/: agent.rs  api.rs  command.rs  config.rs  control.rs  control_plane.rs  credential.rs  event.rs  experimental.rs  file.rs  global.rs  health.rs  instance.rs  integration.rs  mcp.rs  metadata.rs  mod.rs  model.rs  permission.rs  project.rs  project_copy.rs  provider.rs  pty.rs  query.rs  question.rs  reference.rs  session.rs  skill.rs  sync.rs  tui.rs  workspace.rs
crates/rustcode-tui/: Cargo.toml
crates/rustcode-tui/src/: app.rs  clipboard.rs  editor.rs  event.rs  home_screen.rs  keymap.rs  lib.rs  plugin.rs  sse_client.rs  syntax.rs  theme.rs  which_key.rs
crates/rustcode-tui/src/components/: conversation.rs  dialog.rs  diff.rs  export_dialog.rs  input.rs  mod.rs  model_selector.rs  permission.rs  question.rs  session_list.rs  sidebar.rs  status.rs  subagent.rs  timeline.rs  toast.rs  tool_render.rs
docs/: plugin-system.md
logs/: ci-loop-state.json  fix-report.json
report/: architecture-roadmap.md  complete-findings.md  executive-summary.md  implementation-roadmap.md  master-gap-analysis.md  parity-roadmap.md  risk-register.md  scorecard.md  superiority-roadmap.md
report/agents/: api.md  architecture.md  competitive-intelligence.md  database.md  dependencies.md  devex.md  feature-gap.md  infrastructure.md  logic-verification.md  maintainability.md  performance.md  production-readiness.md  refactoring.md  reliability.md  repository-cartography.md  rust-expert.md  scalability.md  security.md  technical-debt.md  testing.md
reports/: 00-EXECUTIVE-SUMMARY.md  00-MASTER-PARITY-REPORT.md  01-SESSION-SYSTEM.md  01-cli-tui-verify.md  01-cli-tui.md  02-AGENT-SYSTEM.md  02-session-storage.md  03-TOOL-SYSTEM.md  03-lsp.md  04-PROVIDER-LLM.md  04-mcp.md  05-CONFIG-SYSTEM.md  05-providers-pass2.md  05-providers.md  06-PERMISSION-SYSTEM.md  06-database.md  06-tool-execution.md  07-DATABASE-STORAGE.md  07-permissions-auth.md  08-SERVER-SYSTEM.md  08-config.md  09-TUI-SYSTEM.md  09-server-api.md  10-LSP-SYSTEM.md  10-pty-shell.md  11-MCP-SYSTEM.md  11-events-bus.md  12-PLUGIN-SYSTEM.md  12-file-edit-diff.md  13-EVENT-BUS-GIT-SUPPORT.md  13-plugins-extensions.md  13-plugins.md  14-CLI-COMMANDS.md  14-telemetry-logging.md  15-AUTH-CREDENTIALS-IDENTITY.md  15-misc-modules.md  16-FILESYSTEM-PROCESS-PTY-UTIL.md  16-build-packaging-pass2.md  16-build-packaging.md  17-CONSOLIDATED-GAP-MATRIX.md  (+20 more)
riportmimo/: 10-mcp-integration-gap-analysis.md  13-filesystem-files-gap-analysis.md
scripts/: ci-loop.sh  ci-status.sh  version.sh
src/: cli_error.rs  main.rs
src/cli/: mod.rs  prompts.rs  styles.rs
(+103 files in other folders)
