[workspace]
resolver = "2"
members = [".", "crates/rustcode-core", "crates/rustcode-server", "crates/rustcode-tui", "crates/rustcode-lsp", "crates/rustcode-mcp"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sinescode/rustcode"
description = "AI-powered development tool — Rust port of OpenCode"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json"] }
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "6"
glob = "0.3"
ignore = "0.4"
similar = "2"
schemars = "0.8"
futures = "0.3"
tokio-stream = "0.1"
pin-project-lite = "0.2"
dashmap = "6"
tower = "0.5"
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1"
url = "2"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
regex = "1"
rustcode-core = { path = "crates/rustcode-core" }
rustcode-server = { path = "crates/rustcode-server" }
rustcode-tui = { path = "crates/rustcode-tui" }
rustcode-lsp = { path = "crates/rustcode-lsp" }
rustcode-mcp = { path = "crates/rustcode-mcp" }

[package]
name = "rustcode"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
default-run = "rustcode"

[[bin]]
name = "rustcode"
path = "src/main.rs"

[dependencies]
rustcode-core.workspace = true
rustcode-server.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
