[workspace]
resolver = "2"
members = [".", "crates/blazecode-core", "crates/blazecode-server", "crates/blazecode-tui", "crates/blazecode-lsp", "crates/blazecode-mcp", "crates/blazecode-derive", "crates/blazecode-sandbox", "crates/blazecode-session-core", "crates/blazecode-event", "crates/blazecode-storage", "crates/blazecode-provider"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sinescode/blazecode"
description = "AI-powered development tool built in Rust"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "json", "derive"] }
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "6"
glob = "0.3"
ignore = "0.4"
similar = "2"
schemars = "0.8"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
pin-project-lite = "0.2"
dashmap = "6"
tower = "0.5"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = "0.24"
bytes = "1"
url = "2"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
regex = "1"
rand = "0.8"
serde_yaml = "0.9"
tempfile = "3"
shlex = "1"
urlencoding = "2"
walkdir = "2"
image = "0.25"
dialoguer = "0.11"
indicatif = "0.17"
notify = { version = "6", default-features = false, features = [] }
tree-sitter = "0.24"
tree-sitter-bash = "0.23"
once_cell = "1"
blazecode-core = { path = "crates/blazecode-core" }
blazecode-server = { path = "crates/blazecode-server" }
blazecode-tui = { path = "crates/blazecode-tui" }
blazecode-lsp = { path = "crates/blazecode-lsp" }
blazecode-mcp = { path = "crates/blazecode-mcp" }

[package]
name = "blazecode"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
default-run = "blazecode"

[[bin]]
name = "blazecode"
path = "src/main.rs"

[dependencies]
blazecode-core.workspace = true
blazecode-server.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
dirs.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
futures.workspace = true
tokio-util.workspace = true
sqlx.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
clap_complete = "4"
blazecode-tui.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_futures"] }

[[bench]]
name = "benchmarks"
harness = false
