[package]
name = "blazecode-event"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Typed pub/sub event bus with projectors — extracted from blazecode-core event.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
sha2.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["sync"] }
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
