[package]
name = "blazecode-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LSP integration for blazecode"

[dependencies]
blazecode-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

