[package]
name = "blazecode-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) integration for blazecode"

[dependencies]
blazecode-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true

[dev-dependencies]
temp-env = "0.3"
