[package]
name = "blazecode-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider-agnostic AI integration — prompt cache, streaming, structured output, multi-provider orchestration"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
futures.workspace = true
sha2.workspace = true
hex.workspace = true
async-trait.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile.workspace = true
