[package]
name = "blazecode-session-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Session state machine — formal SessionState enum with compile-time transition validation"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
