[package]
name = "blazecode-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite + JSONL storage layer with WAL crash recovery — replaces flat files"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }
futures.workspace = true
sha2.workspace = true
hex.workspace = true
walkdir.workspace = true
tempfile.workspace = true

[dev-dependencies]
sqlx = { workspace = true }
