[package]
name = "rustcode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
sqlx.workspace = true
reqwest.workspace = true
futures.workspace = true
tokio-stream.workspace = true
pin-project-lite.workspace = true
dashmap.workspace = true
chrono.workspace = true
rand.workspace = true
toml.workspace = true
dirs.workspace = true
glob.workspace = true
ignore.workspace = true
similar.workspace = true
schemars.workspace = true
bytes.workspace = true
url.workspace = true
base64.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
regex.workspace = true
tokio-util.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
shlex.workspace = true
urlencoding.workspace = true
