[package]
name = "rustcode-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) integration for rustcode"

[dependencies]
rustcode-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true

[dev-dependencies]
temp_env = "0.3"
