[package]
name = "rustcode-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
rustcode-core.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tower.workspace = true
futures.workspace = true
tokio-stream.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
