[package]
name = "rustcode-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for rustcode"

[dependencies]
rustcode-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
futures.workspace = true
