[package]
name = "rustcode-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for rustcode"

[dependencies]
rustcode-core.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "time", "rt"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
futures.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
chrono.workspace = true
ratatui = "0.26"
crossterm = "0.27"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
